--- a/src/curve-separator/style.scss
+++ b/src/curve-separator/style.scss
@@ -18,5 +18,13 @@
 		&.top-curve{
 			top:0;
 		}
+		&.bottom-curve{
+			bottom:0;
+		}
+		svg{
+			position:absolute;
+			top: 0;
+			left: 0;
+		}
 	}
 }
